force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__DispenseIntervalNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DispenseIntervalNumber__c</fullName>
    <label>Dispense Interval</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DispenseIntervalNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>