force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__DispenseIntervalUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DispenseIntervalUOMId__c</fullName>
    <label>Dispense Interval Unit of Measure</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DispenseIntervalUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>