force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__FillQuantityUOMId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FillQuantityUOMId__c</fullName>
    <label>Fill Quantity UOM</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FillQuantityUOMId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>