force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__Id__c.field-meta.xml
<CustomField>
    <fullName>ssot__Id__c</fullName>
    <label>Patient Medication Request Id</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <primaryIndexOrder>1</primaryIndexOrder>
        <refAttrDeveloperName>Id</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>