force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__InitialFillQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__InitialFillQuantity__c</fullName>
    <label>Initial Fill Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InitialFillQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>