force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__IsIgnored__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsIgnored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ignored</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsIgnored</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>