force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__MedicationCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedicationCodeId__c</fullName>
    <label>Medication Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedicationCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>