force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__PrescribedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrescribedDate__c</fullName>
    <label>Prescribed Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrescribedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>