force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__PrescriptionPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrescriptionPeriodStart__c</fullName>
    <label>Prescription Period Start</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrescriptionPeriodStart</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>