force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__PrescriptionStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrescriptionStatus__c</fullName>
    <label>Prescription Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrescriptionStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>