force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__ReasonReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReasonReferenceId__c</fullName>
    <label>Reason Reference</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReasonReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>