force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__RefillDurationNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__RefillDurationNumber__c</fullName>
    <label>Refill Duration</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RefillDurationNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>