force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__RefillsAllowedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__RefillsAllowedQuantity__c</fullName>
    <label>Refills Allowed Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RefillsAllowedQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>