force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__rel_1716724966671_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716724966671_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedicationRequest_SecondaryIn_rel</label>
    <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
    <relationshipLabel>PatientMedicationRequest_SecondaryIn_rel</relationshipLabel>
    <relationshipName>rel_1716724966671_end</relationshipName>
    <type>Lookup</type>
</CustomField>