force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__rel_1716724968831_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716724968831_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedicationRequest_ReasonRefer_rel</label>
    <referenceTo>ssot__CareObservation__dlm</referenceTo>
    <relationshipLabel>PatientMedicationRequest_ReasonRefer_rel</relationshipLabel>
    <relationshipName>rel_1716724968831_end</relationshipName>
    <type>Lookup</type>
</CustomField>