force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__rel_1716724970514_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716724970514_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PatientMedicationRequest_RequesterId_rel</label>
    <referenceTo>ssot__PatientRegisteredDevice__dlm</referenceTo>
    <relationshipLabel>PatientMedicationRequest_RequesterId_rel</relationshipLabel>
    <relationshipName>rel_1716724970514_end</relationshipName>
    <type>Lookup</type>
</CustomField>