force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__RelatedPatientMedicationRequestId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedPatientMedicationRequestId__c</fullName>
    <label>Related Patient Medication Request</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedPatientMedicationRequestId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>