force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__Status__c.field-meta.xml
<CustomField>
    <fullName>ssot__Status__c</fullName>
    <label>Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Status</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>