force-app/main/default/objects/ssot__PatientMedicationRequest__dlm/fields/ssot__SubstitutionReasonCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubstitutionReasonCodeId__c</fullName>
    <label>Substitution Reason Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubstitutionReasonCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>